# secure-file-sharing

./: .gitignore  Cargo.toml  README.md
data/watch/: txt.txt
src/: .env  lib.rs  main.rs  test_sqlite.rs
src/auth/: authenticator.rs  mod.rs
src/core/: file_metadata.rs  merkle_tree.rs  mod.rs
src/crypto/: commitment.rs  hash.rs  mod.rs
src/db/: database.rs  mod.rs  models.rs
src/filter/: bloom.rs  mod.rs
src/service/: file_sharing.rs  mod.rs
src/storage/: engine.rs  mod.rs
