[package]
name = "secure-file-sharing"
version = "1.0.0"
edition = "2021"
description = "Secure File Sharing System with Integrity Verification"
authors = ["Alireza Rahi <alireza.rahi@outlook.com>"]
license = "MIT"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "json"] }
tokio = { version = "1.35", features = ["full"] }
dotenv = "0.15"
thiserror = "1.0"
rpassword = "7.3"
dialoguer = "0.11"     # اینو به 0.11 تغییر بده
console = "0.15"
colored = "2.0"
# این دو تا رو اضافه کن:
futures = "0.3"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.5"

[lib]
name = "secure_file_sharing"
path = "src/lib.rs"

[[bin]]
name = "secure-file-sharing"
path = "src/main.rs"